--- a/www/index.html
+++ b/www/index.html
@@ -115,45 +115,64 @@
                             </p>
                         </div>
                         <div id='terms_of_use'>
-                        <h2>Cornell University Copyright Notification</h2>
-                        <p>
-                            The University expects that users of these services will in good faith post material in
-                            compliance with copyright laws. If you have questions about the use of any material, please
-                            send mail to copyright@cornell.edu. To the best of my knowledge, I assert that all the
-                            copyrighted material that I will post on this site will be used in a manner consistent with
-                            copyright law. I either have permission to use the material or believe, after performing a
-                            "fair use" assessment, that it falls within the "fair use" exception to the requirement of
-                            getting permission.
-                        </p>
-                        <h2>Academic Integrity </h2>
-                        <p>
-                            Course materials posted on Canvas are intellectual property belonging to the author.
-                            Students are not permitted to buy or sell any course materials without the express
-                            permission of the instructor. Such unauthorized behavior constitutes academic misconduct.
-                            <a href='http://cuinfo.cornell.edu/aic.cfm'>Code of Academic Integrity</a>
-                        </p>
-                        <h2>Report Student Academic Concerns </h2>
-                        <p>
-                            Please <a href=' https://data.arts.cornell.edu/faculty/sit/st_entrysearch.cfm'>inform</a>
-                            your college about any students for whom you have academic concerns.
-                        </p>
-                        <h3>Policies & Guidelines</h3>
-                        <ul>
-                            <li><a href='https://www.dfa.cornell.edu/sites/default/files/policy/vol4_15.pdf'>Faculty
-                                    Guide to Copyright</a></li>
-                            <li><a href='http://registrar.sas.cornell.edu/Faculty/studentinfo.html'>Use of Student Data
-                                    Guidelines</a></li>
-                            <li><a href='#'>FERPA and Teaching with Technology</a></li>
-                            <li><a href='https://it.cornell.edu/regulated-data-chart'>Guidelines for Using Campus IT
-                                    Services with Regulated Data</a></li>
-                        </ul>
-                        <h2>Security Notice</h2>
-                        <p>
-                            To make sure that no one can connect to Canvas using your account, you must Logout from
-                            Canvas and Exit/Quit the browser application. Clearing Your
-                            <a href='http://www.cit.cornell.edu/services/identity/cuweblogin/more.html'>CUWebLogin
-                                Credentials</a>
-                        </p>
+                            <h2>Cornell University Copyright Notification</h2>
+                            <p>
+                                The University expects that users of these services will in good faith post material in
+                                compliance with copyright laws. If you have questions about the use of any material,
+                                please
+                                send mail to copyright@cornell.edu. To the best of my knowledge, I assert that all the
+                                copyrighted material that I will post on this site will be used in a manner consistent
+                                with
+                                copyright law. I either have permission to use the material or believe, after
+                                performing a
+                                "fair use" assessment, that it falls within the "fair use" exception to the requirement
+                                of
+                                getting permission.
+                            </p>
+                            <h2>Academic Integrity </h2>
+                            <p>
+                                Course materials posted on Canvas are intellectual property belonging to the author.
+                                Students are not permitted to buy or sell any course materials without the express
+                                permission of the instructor. Such unauthorized behavior constitutes academic
+                                misconduct.
+                                <a href='http://cuinfo.cornell.edu/aic.cfm'>Code of Academic Integrity</a>
+                            </p>
+                            <h2>Report Student Academic Concerns </h2>
+                            <p>
+                                Please <a href=' https://data.arts.cornell.edu/faculty/sit/st_entrysearch.cfm'>inform</a>
+                                your college about any students for whom you have academic concerns.
+                            </p>
+                            <h3>Policies & Guidelines</h3>
+                            <ul>
+                                <li><a href='https://www.dfa.cornell.edu/sites/default/files/policy/vol4_15.pdf'>Faculty
+                                        Guide to Copyright</a></li>
+                                <li><a href='http://registrar.sas.cornell.edu/Faculty/studentinfo.html'>Use of Student
+                                        Data
+                                        Guidelines</a></li>
+                                <li><a href='#'>FERPA and Teaching with Technology</a></li>
+                                <li><a href='https://it.cornell.edu/regulated-data-chart'>Guidelines for Using Campus
+                                        IT
+                                        Services with Regulated Data</a></li>
+                            </ul>
+                            <h2>Security Notice</h2>
+                            <p>
+                                To make sure that no one can connect to Canvas using your account, you must Logout from
+                                Canvas and Exit/Quit the browser application. Clearing Your
+                                <a href='http://www.cit.cornell.edu/services/identity/cuweblogin/more.html'>CUWebLogin
+                                    Credentials</a>
+                            </p>
+                            <h2>FERPA / GDPR </h2>
+                            <p>ligula, eu ullamcorper odio libero at ante. Vestibulum et elit ac massa
+                                bibendum blandit. Integer dignissim sapien nec orci vulputate, in venenatis
+                                metus aliquet.
+                            </p>
+                            <p>Suspendisse placerat leo vel posuere bibendum. Nunc sagittis velit sit amet
+                                velit finibus molestie.dimentum elementum vel sit amet neque. Sed consequat elit ante,
+                                id maximus urna facilisis a. Vivamus quis dolor tempor lorem ornare faucibus.
+                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
+                                egestas. Sed nibh nisl, mattis nec ante nec, rutrum molestie ante. Maecenas ut
+                                pellentesque risus.
+                            </p>
                         </div>
                     </section>
                 </article>
@@ -173,7 +192,7 @@
             <div class="container-fluid sidebar-left">
                 <div class="row">
                     <div class="primary">
-                        <div class="two-col padded footer-links">
+                        <div class="one-col padded footer-links">
                             <div>
                                 <h3 class="h6">Additional Resources
                                 </h3>
@@ -182,20 +201,6 @@
                                         website or need materials in an alternate format, Contact
                                         <a href="mailto:web-accessibility@cornell.edu">web-accessibility@cornell.edu</a>
                                         for assistance.
-                                    </li>
-                                </ul>
-                            </div>
-                            <div>
-                                <h3 class="h6">FERPA / GDPR </h3>
-                                <ul class="list-menu vertical">
-                                    <li>
-                                        <p>ligula, eu ullamcorper odio libero at ante. Vestibulum et elit ac massa
-                                            bibendum blandit. Integer dignissim sapien nec orci vulputate, in venenatis
-                                            metus aliquet.
-                                        </p>
-                                        <p>Suspendisse placerat leo vel posuere bibendum. Nunc sagittis velit sit amet
-                                            velit finibus molestie.
-                                        </p>
                                     </li>
                                 </ul>
                             </div>
@@ -239,15 +244,17 @@
     <!-- google analytics-->
     <!-- https://confluence.cornell.edu/display/customdev/Google+Analytics+track+external+links -->
     <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
         ga('create', 'UA-12345678-9', 'auto');
         ga('send', 'pageview');
-      
-      </script>
+
+    </script>
 </body>
 
 </html>
