--- a/www/home.html
+++ b/www/home.html
@@ -41,24 +41,29 @@
 
         #site-header>div>div>div {
             padding-top: 2em;
-            ;
         }
 
         .child {
             /*padding-left: 42%;*/
         }
 
+        #home-events {
+            background: #f4f6f8;
+            padding-top: 40px;
+            padding-bottom: 0px;
+        }
+
         .para {
             margin-bottom: 1em;
         }
 
+        .col-sm-4 {
+            text-align: right;
+        }
+
         #home-events>div>div>div.col {
-            /*
-            padding-top: 1em;
-            padding-bottom: 1em;
-            border-bottom: 1px solid #ddd;
-            */
-            border-left: 3px solid #b31b1b;
+            border-left: 2px solid;
+            border-color: rgba(179, 27, 27, 0.4);
         }
 
         #home-events>div>div:nth>div.col-sm-4 {
@@ -67,7 +72,7 @@
 
         #home-events>div>div.row {
             padding: 2em 0;
-            border-bottom: solid 1px #ddd;
+            /*border-bottom: solid 1px #ddd;*/
         }
 
         /* beginning of import */
