--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,7 @@
 
 <body class="cu-seal sidebar sidebar-right sidebar-tint secondary-page">
     <div id="skipnav"><a href="#main">Skip to main content</a></div>
-    <div id="cu-search" class="cu-search">
+    <!--div id="cu-search" class="cu-search">
         <div class="container-fluid">
             <form id="cu-search-form" role="search" action="//www.cornell.edu/search/">
                 <label for="cu-search-query" class="sr-only">Search:</label>
@@ -45,7 +45,7 @@
                 </div>
             </form>
         </div>
-    </div>
+    </div -->
     <div id="brand" class="band">
         <header id="cu-header">
             <div class="cu45-helper"></div>
@@ -53,9 +53,9 @@
                 <h1 class="cu-logo"><a href="http://www.cornell.edu"><img class="sr-only" src="images/cornell/bold_cornell_logo_simple_b31b1b.svg"
                             alt="Cornell University" width="245" height="62"></a></h1>
                 <div class="cu-unit">
-                    <h2><a href="/">Welcome to Canvas at Cornell University</a></h2>
+                    <h2><a href="/"><img id='canvasAtCornellLogo' src='./images/logo/CanvasatCornellText500.png' alt='Canvas at Cornell'></a></h2>
                 </div>
-                <div class="buttons">
+                <!-- div class="buttons">
                     <button class="mobile-button" id="cu-search-button">Search</button>
                     <nav id="utility-navigation" aria-label="Supplementary Navigation">
                         <ul class="list-menu links">
@@ -63,7 +63,7 @@
                             <li><a href="mailto:canvas@cornell.edu">Contact Us</a></li>
                         </ul>
                     </nav>
-                </div>
+                </div -->
             </div>
             <div class="flex">
                 <div id='notification' class="container-fluid">
@@ -78,7 +78,7 @@
                     <h2 class='mobile-hidden'>Help & Support links</h2>
                     <nav class="secondary-navigation mobile-expander" aria-label="Section Navigation">
                         <div class="">
-                            <ul class="menu">
+                            <!-- ul class="menu">
                                 <li class="current-menu-ancestor current-menu-parent">
                                     <ul class="sub-menu">
                                         <li class="menu-item"><a href="https://community.canvaslms.com/community/answers/guides/">Search
@@ -92,14 +92,28 @@
                                         </li>
                                     </ul>
                                 </li>
+                            </ul -->
+
+
+                            <ul class="menu">
+                                <li class="current-menu-ancestor current-menu-parent">
+                                    <ul class="sub-menu">
+                                        <li class="menu-item menu-item--collapsed"><a href="https://community.canvaslms.com/community/answers/guides/">Help with Canvas</a></li>
+                                        <li class="menu-item menu-item--collapsed"><a href="mailto:support@instructure.com">Help designing your Canvas course</a></li>
+                                        <li class="menu-item menu-item--collapsed"><a href="https://it.cornell.edu/canvas/">Blackboard
+                                                to Canvas Migration </a></li>
+
+                                    </ul>
+                                </li>
                             </ul>
+
                         </div>
                     </nav>
                 </div>
                 <article id="main-article" class="primary impact">
                     <section>
                         <div class="primary">
-                            <h2 class='h1'>Log Into <em>Canvas</em></h2>
+                            <h2 class='h1'>Log Into Canvas</h2>
                             <p>
                                 <a class='link-button' href='https://cornell.instructure.com/login/saml/1'>Cornell
                                     NetID</a>
@@ -111,7 +125,7 @@
                                 <a class='link-button' href='https://cornell.instructure.com/login/canvas'>Guest</a>
                             </p>
                             <p>
-                                <a href='#terms_of_use'>Canvas Terms of Use FAQ</a>
+                                <!--h3 class='black-text'>Security Notice:</h3 --> To assure that no one can connect to Canvas using your account, Logout from Canvas and Exit / Quit the browser application. Clearing your CUWebLogin credentials
                             </p>
                         </div>
                         <div id='terms_of_use'>
@@ -137,7 +151,10 @@
                                 misconduct.
                                 <a href='http://cuinfo.cornell.edu/aic.cfm'>Code of Academic Integrity</a>
                             </p>
-                            <h2>Report Student Academic Concerns </h2>
+                            <p>
+                                <a href='#'>Canvas Terms of Use</a>
+                            </p>
+                            <!--h2>Report Student Academic Concerns </h2>
                             <p>
                                 Please <a href=' https://data.arts.cornell.edu/faculty/sit/st_entrysearch.cfm'>inform</a>
                                 your college about any students for whom you have academic concerns.
@@ -153,15 +170,15 @@
                                 <li><a href='https://it.cornell.edu/regulated-data-chart'>Guidelines for Using Campus
                                         IT
                                         Services with Regulated Data</a></li>
-                            </ul>
-                            <h2>Security Notice</h2>
+                                </ul-->
+                            <!--h2>Security Notice</h2>
                             <p>
                                 To make sure that no one can connect to Canvas using your account, you must Logout from
                                 Canvas and Exit/Quit the browser application. Clearing Your
                                 <a href='http://www.cit.cornell.edu/services/identity/cuweblogin/more.html'>CUWebLogin
                                     Credentials</a>
-                            </p>
-                            <h2>FERPA / GDPR </h2>
+                            </p -->
+                            <!--h2>FERPA / GDPR </h2>
                             <p>ligula, eu ullamcorper odio libero at ante. Vestibulum et elit ac massa
                                 bibendum blandit. Integer dignissim sapien nec orci vulputate, in venenatis
                                 metus aliquet.
@@ -172,14 +189,14 @@
                                 Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
                                 egestas. Sed nibh nisl, mattis nec ante nec, rutrum molestie ante. Maecenas ut
                                 pellentesque risus.
-                            </p>
+                            </p-->
                         </div>
                     </section>
                 </article>
                 <div id="sidebar-bottom" class="secondary" role="complementary">
-                    <div class="content-block">
+                    <!--div class="content-block">
                         <a href="mailto:canvas@cornell.edu" class="contact-us light">Contact Us</a>
-                    </div>
+                    </div-->
                     <div id=spotlight>
                         <!-- load dynamic content here -->
                     </div>
