--- a/www/index.html
+++ b/www/index.html
@@ -87,8 +87,8 @@
                                         <li class="menu-item"><a href="https://teaching.cornell.edu/">Center for
                                                 Teaching Innovation</a></li>
                                         <li class="menu-item"><a href="https://it.cornell.edu/canvas/">Blackboard to
-                                                Canvas Migration </a></li>
-                                        <li class="menu-item"><a href="https://www.instructure.com/">About Canvas</a>
+                                                Canvas migration </a></li>
+                                        <li class="menu-itMigratem"><a href="https://www.instructure.com/">About Canvas</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -125,7 +125,7 @@
                                 <a class='link-button' href='https://cornell.instructure.com/login/canvas'>Guest</a>
                             </p>
                             <p>
-                                <!--h3 class='black-text'>Security Notice:</h3 --> To assure that no one can connect to Canvas using your account, Logout from Canvas and Exit / Quit the browser application. Clearing your CUWebLogin credentials
+                                <!--h3 class='black-text'>Security Notice:</h3 --> Security Notice - to assure that no one can connect to Canvas using your account, Logout from Canvas and Exit / Quit the browser application. <a class='dark-color' href='http://www.cit.cornell.edu/services/identity/cuweblogin/more.html'>Clearing your CUWebLogin credentials</a>
                             </p>
                         </div>
                         <div id='terms_of_use'>
@@ -152,44 +152,9 @@
                                 <a href='http://cuinfo.cornell.edu/aic.cfm'>Code of Academic Integrity</a>
                             </p>
                             <p>
-                                <a href='#'>Canvas Terms of Use</a>
+                                <h2><a href='https://www.canvaslms.com/policies/terms-of-use'>Canvas Terms of Use</a></h2>
                             </p>
-                            <!--h2>Report Student Academic Concerns </h2>
-                            <p>
-                                Please <a href=' https://data.arts.cornell.edu/faculty/sit/st_entrysearch.cfm'>inform</a>
-                                your college about any students for whom you have academic concerns.
-                            </p>
-                            <h3>Policies & Guidelines</h3>
-                            <ul>
-                                <li><a href='https://www.dfa.cornell.edu/sites/default/files/policy/vol4_15.pdf'>Faculty
-                                        Guide to Copyright</a></li>
-                                <li><a href='http://registrar.sas.cornell.edu/Faculty/studentinfo.html'>Use of Student
-                                        Data
-                                        Guidelines</a></li>
-                                <li><a href='#'>FERPA and Teaching with Technology</a></li>
-                                <li><a href='https://it.cornell.edu/regulated-data-chart'>Guidelines for Using Campus
-                                        IT
-                                        Services with Regulated Data</a></li>
-                                </ul-->
-                            <!--h2>Security Notice</h2>
-                            <p>
-                                To make sure that no one can connect to Canvas using your account, you must Logout from
-                                Canvas and Exit/Quit the browser application. Clearing Your
-                                <a href='http://www.cit.cornell.edu/services/identity/cuweblogin/more.html'>CUWebLogin
-                                    Credentials</a>
-                            </p -->
-                            <!--h2>FERPA / GDPR </h2>
-                            <p>ligula, eu ullamcorper odio libero at ante. Vestibulum et elit ac massa
-                                bibendum blandit. Integer dignissim sapien nec orci vulputate, in venenatis
-                                metus aliquet.
-                            </p>
-                            <p>Suspendisse placerat leo vel posuere bibendum. Nunc sagittis velit sit amet
-                                velit finibus molestie.dimentum elementum vel sit amet neque. Sed consequat elit ante,
-                                id maximus urna facilisis a. Vivamus quis dolor tempor lorem ornare faucibus.
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
-                                egestas. Sed nibh nisl, mattis nec ante nec, rutrum molestie ante. Maecenas ut
-                                pellentesque risus.
-                            </p-->
+
                         </div>
                     </section>
                 </article>
